# vc-best-practice

./: .dockerignore  .envrc  .gitignore  pyproject.toml
.agents/: README.md  config.toml
.agents/skill-mcp-context7/: SKILL.md
.agents/skill-mcp-context7/agents/: openai.yaml
.agents/skill-mcp-docker/: SKILL.md
.agents/skill-mcp-github/: SKILL.md
.agents/skill-mcp-github/agents/: openai.yaml
.agents/skill-mcp-kubernetes/: SKILL.md
.agents/skill-mcp-kubernetes/agents/: openai.yaml
.agents/skill-mcp-notion/: SKILL.md
.agents/skill-mcp-notion/agents/: openai.yaml
.agents/skill-mcp-postgres/: SKILL.md
.agents/skill-mcp-postgres/agents/: openai.yaml
.agents/skill-mcp-sqlite/: SKILL.md
.agents/skill-mcp-sqlite/agents/: openai.yaml
.agents/skill-project-plan-creator/: SKILL.md
.agents/skill-python-project-structure/: SKILL.md
.codex/: config.toml
.codex/project-progress-tracker/: SKILL.md
.codex/python-best-practices/: SKILL.md
.codex/python-project-structure/: SKILL.md
agent_home_sync/: cli.py  fs_sync.py  models.py  toml_merge.py
docs/: README.md
tests/unit/: test_toml_merge.py
